# Group_chat

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
postgres/migrations/: 000_init_db.sql
src/: Dockerfile  depends.py  example.env  main.py  settings.py
src/engines/: postgres_storage.py  websocket_client.py
src/models/: base.py  chat_messages.py  user.py
src/repositories/: base.py  chat_message.py  user.py
src/routers/: __init__.py  auth.py  chat.py  chat_history.py  user.py  websocket.py
src/schemes/: auth.py  base.py  chat_history.py  user.py
src/services/: auth.py  chat_history.py  user.py  websocket.py
src/static/: app.js  emoji.js  style.css
src/templates/: index.html
src/utilities/: auth.py
