[tool.poetry]
name = "group_chat"
version = "0.1.0"
description = ""
authors = ["FOURWORDSALLCAPS"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = { extras = ["all"], version = "^0.110.2" }
asyncpg = "^0.30.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
uvicorn = { extras = ["standard"], version = "^0.29.0" }
rodi = "^2.0.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
